--- a/example/index.html
+++ b/example/index.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mini CSS-in-JS Demo</title>
+    <script src="./style.ts" type="module"></script>
 </head>
 
 <body>
     <div id="app">
-        <button class="button">Click Me</button>
+        <button class="button1">Button 1</button>
+        <button class="button2">Button 2</button>
     </div>
-    <script src="./style.ts" type="module"></script>
 </body>
 
 </html>
